--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,17 @@
 --transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.visually-hidden {
+    position: absolute !important;
+    clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+    clip: rect(1px, 1px, 1px, 1px);
+    padding: 0 !important;
+    border: 0 !important;
+    height: 1px !important;
+    width: 1px !important;
+    overflow: hidden;
+  }
+
 body{
     font-family: var(--text-font)
 }
@@ -662,6 +673,10 @@ margin-right: 30px;
     margin-right: 10px;
 }
 
+.footer-social {
+    margin-right: 93px;
+}
+
 .footer-social-call {
     font-weight: 700;
     font-size: 14px;
@@ -706,10 +721,68 @@ margin-right: 30px;
     fill:var(--second-text-color);
 }
 
+.footer-subscription-title{
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.143;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+
+    color: #FFFFFF;
+
+    margin-bottom: 20px;
+}
+
+.footer-form-input {
+    width: 358px;
+    height: 50px;
+
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-sizing: border-box;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    background: #2F303A;
+
+    padding-left: 16px;
+    margin-right: 12px;
+
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-form-button {
+    position: relative;
+    width: 200px;
+    height: 50px;
+    background: #2196F3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    cursor: pointer;
+
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.875;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
+    padding-top: 10px;
+    padding-right: 62px;
+    padding-bottom: 10px;
+    padding-left: 29px;
+}
 
 
-
-
+.footer-form-icon {
+    position: absolute;
+    top: 50%;
+    left: 148px;
+    transform: translateY(-50%);
+    width: 24px;
+    height: 24px;
+}
 
 /* ======================== END footer ============================ */
 
@@ -862,11 +935,11 @@ box-shadow var(--transition-duration) var(--transition-timing-function);
     width: 528px;
     height: 581px;
 
-
-
     background-color: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
+
+    padding: 40px;
 }
 
 .modal-close-btn { 
@@ -891,6 +964,147 @@ box-shadow var(--transition-duration) var(--transition-timing-function);
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+}
+
+.modal-form {
+    display: flex;
+    flex-direction: column;
+}
+
+.modal-form-title {
+    display: block;
+    width: 100%;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+
+    color: #212121;
+    margin-bottom: 30px;
+}
+
+.modal-form-input-label {
+    margin-bottom: 28px;
+}
+
+.modal-form-input-wrapper {
+    display: block;
+    position: relative;
+}
+
+.modal-form-input {
+    display: block;
+    width: 100%;
+    height: 40px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.143;
+    letter-spacing: 0.01em;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    box-sizing: border-box;
+    border-radius: 4px;
+    padding-left: 42px;
+    transition: border-color var(--transition-duration) var(--transition-timing-function);
+}
+
+.modal-form-input:focus + .modal-form-icon {
+    fill: var(--accent-color);
+}
+
+.modal-form-input:focus {
+    outline: none;
+    border-color: var(--accent-color);
+}
+
+.modal-form-icon {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 15px;
+    transform: translateY(-50%);
+    width: 18px;
+    height: 18px;
+    background: #FFFFFF;
+    transition: fill var(--transition-duration) var(--transition-timing-function);
+}
+
+.modal-form-message {
+    display: block;   
+    width: 100%;
+    height: 120px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.143;
+    letter-spacing: 0.01em;
+
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    box-sizing: border-box;
+    border-radius: 4px;
+    resize: none;
+    padding: 12px 16px;
+    transition: border-color var(--transition-duration) var(--transition-timing-function);
+}
+
+.modal-form-message:focus {
+    outline: none;
+    border-color: var(--accent-color);
+}
+
+.modal-form-message::placeholder {
+    color: rgba(117, 117, 117, 0.5);
+}
+
+
+.modal-form-label-policy::before {
+    display: inline-block;
+    content: "";
+    width: 16px;
+    height: 15px;
+    /* outline: 1px #212121; */
+    margin-right: 10px;
+    background-image: url(../images/check-box.svg);
+}
+
+.modal-form-check-policy:checked + .modal-form-label-policy::before{
+    background-image: url(../images/check-box-1.svg);
+    background-color: var(--accent-color);
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+}
+
+.modal-form-check-policy:focus + .modal-form-label-policy::before{
+    box-shadow: 0 0 0 2px var(--accent-color);
+}
+
+.modal-form-label-policy {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.714;
+    letter-spacing: 0.03em;
+    color: #757575;
+
+    margin-bottom: 30px;
+}
+
+.modal-form-button {
+    align-self: center;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 30px;
+    letter-spacing: 0.06em;
+
+    color: #FFFFFF;
+    width: 200px;
+    height: 50px;
+    background: #188CE8;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    padding: 10px 55px;
+    cursor: pointer;
 }
 
 /* ===================== END Backdrop ================================*/
