--- a/css/styles.css
+++ b/css/styles.css
@@ -592,6 +592,10 @@ margin-right: 30px;
     padding-bottom: 60px;
 }
 
+.footer .container{
+    justify-content: space-between;
+}
+
 .address-info {
     margin-right: 70px;
 }
